--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
 
         .btn span {
-            color: #000000;
+            color: #029eff;
             font-weight: 600;
         }
     </style>
