--- a/index.html
+++ b/index.html
@@ -1,49 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sophilia Coming Soon</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sophilia Coming Soon</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        html, body {
-            width: 100%;
-            height: 100%;
-            background: #000000;
-            font-family: 'Montserrat', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    html, body {
+      width: 100%;
+      height: 100%;
+      background: #000;
+      font-family: 'Montserrat', sans-serif;
+      overflow: hidden;
+    }
 
-        .btn {
-            padding: 14px 32px;
-            background: #ffffff;
-            color: #000000;
-            border-radius: 12px;
-            font-size: 16px;
-            text-decoration: none;
-            transition: background 0.3s ease;
-        }
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
 
-        .btn:hover {
-            background: #eaeaea;
-        }
+    .btn {
+      position: absolute;
+      z-index: 1;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 14px 32px;
+      background: #ffffff;
+      color: #000000;
+      border-radius: 12px;
+      font-size: 16px;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
 
-        .btn span {
-            color: #029eff;
-            font-weight: 600;
-        }
-    </style>
+    .btn:hover {
+      background: #eaeaea;
+    }
+
+    .btn span {
+      color: #029eff;
+      font-weight: 600;
+    }
+  </style>
 </head>
 <body>
-<a class="btn" href="https://www.linkedin.com/company/sophilia" target="_blank">Join Us on <span>Linkedin</span></a>
+  <canvas></canvas>
+  <a class="btn" href="https://www.linkedin.com/company/sophilia" target="_blank">
+    Join Us on <span>Linkedin</span>
+  </a>
+
+  <!-- WebGL Fluid Simulation Script -->
+  <script src="https://cdn.jsdelivr.net/gh/PavelDoGreat/WebGL-Fluid-Simulation/dist/script.js"></script>
+
+  <script>
+    // Wait for simulation to be ready and apply initial blue splash
+    window.addEventListener('load', () => {
+      if (typeof splat === 'function') {
+        splat(window.innerWidth / 2, window.innerHeight / 2, 0, 0, [0.2, 0.6, 1.0]);
+      }
+    });
+  </script>
 </body>
 </html>
