--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Sophilia Coming Soon</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     html, body {
-      width: 100%;
       height: 100%;
       background: #000;
       font-family: 'Montserrat', sans-serif;
@@ -23,26 +18,22 @@
 
     canvas {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       z-index: 0;
     }
 
     .btn {
       position: absolute;
-      z-index: 1;
-      top: 50%;
-      left: 50%;
+      top: 50%; left: 50%;
       transform: translate(-50%, -50%);
       padding: 14px 32px;
-      background: #ffffff;
-      color: #000000;
+      background: white;
+      color: black;
       border-radius: 12px;
       font-size: 16px;
       text-decoration: none;
-      transition: background 0.3s ease;
+      z-index: 1;
     }
 
     .btn:hover {
@@ -61,15 +52,21 @@
     Join Us on <span>Linkedin</span>
   </a>
 
-  <!-- WebGL Fluid Simulation Script -->
-  <script src="https://cdn.jsdelivr.net/gh/PavelDoGreat/WebGL-Fluid-Simulation/dist/script.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/gh/PavelDoGreat/WebGL-Fluid-Simulation@master/script.js"></script>
   <script>
-    // Wait for simulation to be ready and apply initial blue splash
-    window.addEventListener('load', () => {
-      if (typeof splat === 'function') {
-        splat(window.innerWidth / 2, window.innerHeight / 2, 0, 0, [0.2, 0.6, 1.0]);
-      }
+    window.addEventListener('DOMContentLoaded', () => {
+      setTimeout(() => {
+        for (let i = 0; i < 5; i++) {
+          const x = Math.random() * window.innerWidth;
+          const y = Math.random() * window.innerHeight;
+          const dx = (Math.random() - 0.5) * 1000;
+          const dy = (Math.random() - 0.5) * 1000;
+          const color = [0.2, 0.6, 1.0]; // Blue
+          if (typeof splat === 'function') {
+            splat(x, y, dx, dy, color);
+          }
+        }
+      }, 800);
     });
   </script>
 </body>
