--- a/index.html
+++ b/index.html
@@ -1,73 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Sophilia Coming Soon</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sophilia Coming Soon</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    html, body {
-      height: 100%;
-      background: #000;
-      font-family: 'Montserrat', sans-serif;
-      overflow: hidden;
-    }
+        html, body {
+            width: 100%;
+            height: 100%;
+            background: #000000;
+            font-family: 'Montserrat', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    canvas {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: 0;
-    }
+        .btn {
+            padding: 14px 32px;
+            background: #ffffff;
+            color: #000000;
+            border-radius: 12px;
+            font-size: 16px;
+            text-decoration: none;
+            transition: background 0.3s ease;
+        }
 
-    .btn {
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 14px 32px;
-      background: white;
-      color: black;
-      border-radius: 12px;
-      font-size: 16px;
-      text-decoration: none;
-      z-index: 1;
-    }
+        .btn:hover {
+            background: #eaeaea;
+        }
 
-    .btn:hover {
-      background: #eaeaea;
-    }
-
-    .btn span {
-      color: #029eff;
-      font-weight: 600;
-    }
-  </style>
+        .btn span {
+            color: #029eff;
+            font-weight: 600;
+        }
+    </style>
 </head>
 <body>
-  <canvas></canvas>
-  <a class="btn" href="https://www.linkedin.com/company/sophilia" target="_blank">
-    Join Us on <span>Linkedin</span>
-  </a>
-
-  <script src="https://cdn.jsdelivr.net/gh/PavelDoGreat/WebGL-Fluid-Simulation@master/script.js"></script>
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      setTimeout(() => {
-        for (let i = 0; i < 5; i++) {
-          const x = Math.random() * window.innerWidth;
-          const y = Math.random() * window.innerHeight;
-          const dx = (Math.random() - 0.5) * 1000;
-          const dy = (Math.random() - 0.5) * 1000;
-          const color = [0.2, 0.6, 1.0]; // Blue
-          if (typeof splat === 'function') {
-            splat(x, y, dx, dy, color);
-          }
-        }
-      }, 800);
-    });
-  </script>
+<a class="btn" href="https://www.linkedin.com/company/sophilia" target="_blank">Join Us on <span>Linkedin</span></a>
 </body>
 </html>
