--- a/index.html
+++ b/index.html
@@ -1,183 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sophilia</title>
-    <link rel="stylesheet" href="https://unpkg.com/@linkedin/css-framework@2.43.0/dist/linkedin.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <title>Sophilia Button</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-        body {
-            height: 100vh;
-            overflow: hidden;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        }
+    body {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #000000; /* pure black */
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text",
+        system-ui, sans-serif;
+    }
 
-        .background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: #000;
-            z-index: -1;
-        }
+    a.button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 14px 44px;
+      border-radius: 18px;
+      border: 2px solid #ffffff;
+      text-decoration: none;
+      background: #000000;
+      cursor: pointer;
+      transition: background 0.2s ease, box-shadow 0.2s ease,
+        transform 0.1s ease;
+      box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.1);
+    }
 
-        .gradient-overlay {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: 
-                radial-gradient(circle at 20% 80%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 80% 20%, rgba(255, 119, 198, 0.25) 0%, transparent 50%),
-                radial-gradient(circle at 40% 40%, rgba(120, 219, 255, 0.2) 0%, transparent 50%),
-                linear-gradient(135deg, rgba(54, 54, 54, 0.8) 0%, rgba(0, 0, 0, 1) 100%);
-            animation: gradientShift 8s ease-in-out infinite alternate;
-        }
+    a.button:hover {
+      background: #111111;
+      box-shadow: 0 0 16px rgba(255, 255, 255, 0.18);
+      transform: translateY(-1px);
+    }
 
-        @keyframes gradientShift {
-            0% {
-                transform: rotate(0deg) scale(1);
-                opacity: 0.7;
-            }
-            33% {
-                transform: rotate(120deg) scale(1.1);
-                opacity: 0.5;
-            }
-            66% {
-                transform: rotate(240deg) scale(0.95);
-                opacity: 0.6;
-            }
-            100% {
-                transform: rotate(360deg) scale(1.05);
-                opacity: 0.7;
-            }
-        }
+    a.button:active {
+      transform: translateY(1px);
+      box-shadow: 0 0 8px rgba(255, 255, 255, 0.12);
+    }
 
-        .center-button {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 12px;
-            padding: 24px 40px;
-            background: linear-gradient(145deg, rgba(255,255,255,0.1) 0%, rgba(255,255,255,0.05) 100%);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255,255,255,0.2);
-            border-radius: 24px;
-            box-shadow: 
-                0 25px 50px -12px rgba(0,0,0,0.5),
-                0 0 0 1px rgba(255,255,255,0.1),
-                inset 0 1px 0 rgba(255,255,255,0.2);
-            cursor: pointer;
-            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            text-decoration: none;
-            color: #fff;
-            min-height: 80px;
-        }
+    .label {
+      font-size: 24px;
+      font-weight: 500;
+      color: #ffffff;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+    }
 
-        .center-button:hover {
-            transform: translate(-50%, -50%) scale(1.05);
-            background: linear-gradient(145deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0.1) 100%);
-            box-shadow: 
-                0 35px 70px -15px rgba(0,0,0,0.6),
-                0 0 0 1px rgba(255,255,255,0.3),
-                inset 0 1px 0 rgba(255,255,255,0.3);
-            backdrop-filter: blur(25px);
-        }
+    .label span.blue {
+      color: #0a66c2; /* LinkedIn blue */
+    }
 
-        .center-button:active {
-            transform: translate(-50%, -50%) scale(0.98);
-        }
-
-        .sophilia-text {
-            font-size: clamp(2rem, 5vw, 4rem);
-            font-weight: 800;
-            letter-spacing: -0.02em;
-            background: linear-gradient(135deg, #ffffff 0%, #e0e0e0 50%, #b8b8b8 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-align: center;
-            line-height: 1.1;
-            margin-bottom: 4px;
-        }
-
-        .linkedin-container {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            opacity: 0.9;
-            font-size: 0.9em;
-            font-weight: 500;
-            color: rgba(255,255,255,0.8);
-        }
-
-        .linkedin-icon {
-            width: 20px;
-            height: 20px;
-            fill: #0a66c2;
-        }
-
-        @media (max-width: 480px) {
-            .center-button {
-                padding: 20px 30px;
-                gap: 8px;
-            }
-            
-            .sophilia-text {
-                letter-spacing: -0.01em;
-            }
-        }
-    </style>
+    .linkedin-icon {
+      width: 20px;
+      height: 20px;
+      fill: #0a66c2;
+    }
+  </style>
 </head>
 <body>
-    <div class="background">
-        <div class="gradient-overlay"></div>
+  <a
+    class="button"
+    href="https://www.linkedin.com/company/sophilia/"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    <svg class="linkedin-icon" viewBox="0 0 24 24" aria-hidden="true">
+      <path
+        d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+      />
+    </svg>
+
+    <div class="label">
+      <span>Sophilia</span>
+      <span class="blue">LinkedIn</span>
     </div>
-
-    <a href="https://www.linkedin.com/company/sophilia/" target="_blank" rel="noopener noreferrer" class="center-button" aria-label="Visit Sophilia on LinkedIn">
-        <div class="sophilia-text">sophilia</div>
-        <div class="linkedin-container">
-            <svg class="linkedin-icon" viewBox="0 0 24 24">
-                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
-            </svg>
-            LinkedIn
-        </div>
-    </a>
-
-    <script>
-        // Add subtle floating animation to gradients
-        document.addEventListener('DOMContentLoaded', () => {
-            const overlay = document.querySelector('.gradient-overlay');
-            let mouseX = 0;
-            let mouseY = 0;
-
-            document.addEventListener('mousemove', (e) => {
-                mouseX = e.clientX / window.innerWidth;
-                mouseY = e.clientY / window.innerHeight;
-                
-                overlay.style.transform = `
-                    rotate(${mouseX * 10 + mouseY * 10}deg) 
-                    scale(1 + (mouseX + mouseY) * 0.05)
-                `;
-            });
-
-            // Parallax effect on scroll (even though no scroll, for future)
-            window.addEventListener('deviceorientation', (e) => {
-                const tiltX = (e.gamma || 0) / 30;
-                const tiltY = (e.beta || 0) / 30;
-                overlay.style.transform += ` translate(${tiltX}px, ${tiltY}px)`;
-            });
-        });
-    </script>
+  </a>
 </body>
 </html>
