--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Sophilia LinkedIn</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sophilia Social</title>
   <style>
     * {
       margin: 0;
@@ -13,47 +14,51 @@
     body {
       height: 100vh;
       width: 100vw;
-      background: #000000; /* black screen */
+      background: #000000;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
+      gap: clamp(1rem, 5vw, 3rem);
     }
 
-    a.logo-link {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
+    .logo {
+      display: block;
+      width: clamp(48px, 12vw, 80px);
+      height: clamp(48px, 12vw, 80px);
+      transition: transform 0.2s ease;
     }
 
-    /* Automatically scales with viewport:
-       min 28px, ideal 6vw, max 44px */
-    .linkedin-icon {
-      width: clamp(28px, 6vw, 44px);
-      height: clamp(28px, 6vw, 44px);
-      fill: #ffffff; /* white logo */
+    .logo:hover {
+      transform: scale(1.1);
+    }
+
+    .instagram svg {
+      fill: #ffffff;
+    }
+
+    .linkedin svg {
+      fill: #ffffff;
+    }
+
+    @media (max-width: 480px) {
+      body {
+        gap: 2rem;
+      }
     }
   </style>
 </head>
 <body>
-  <a
-    class="logo-link"
-    href="https://www.linkedin.com/company/sophilia/"
-    target="_blank"
-    rel="noopener noreferrer"
-    aria-label="Visit Sophilia on LinkedIn"
-  >
-    <svg
-      class="linkedin-icon"
-      viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg"
-      aria-hidden="true"
-    >
-      <rect width="24" height="24" rx="4" ry="4"></rect>
-      <path
-        d="M6.5 6.5C6.5 7.6 5.6 8.5 4.5 8.5C3.4 8.5 2.5 7.6 2.5 6.5C2.5 5.4 3.4 4.5 4.5 4.5C5.6 4.5 6.5 5.4 6.5 6.5ZM6.3 9.8H2.7V19.5H6.3V9.8ZM12.7 9.8H9.2V19.5H12.7V14.3C12.7 11.9 15.8 11.7 15.8 14.3V19.5H19.3V13.5C19.3 9.4 14.6 9.6 12.7 11.6V9.8Z"
-        fill="#000000"
-      ></path>
+  <a href="https://www.instagram.com/sophilia.io/" target="_blank" rel="noopener" class="logo instagram" aria-label="Instagram">
+    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+    </svg>
+  </a>
+
+  <a href="https://www.linkedin.com/company/sophilia" target="_blank" rel="noopener" class="logo linkedin" aria-label="LinkedIn">
+    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <rect width="24" height="24" rx="4" ry="4" fill="none"/>
+      <path d="M6.5 6.5C6.5 7.6 5.6 8.5 4.5 8.5C3.4 8.5 2.5 7.6 2.5 6.5C2.5 5.4 3.4 4.5 4.5 4.5C5.6 4.5 6.5 5.4 6.5 6.5ZM6.3 9.8H2.7V19.5H6.3V9.8ZM12.7 9.8H9.2V19.5H12.7V14.3C12.7 11.9 15.8 11.7 15.8 14.3V19.5H19.3V13.5C19.3 9.4 14.6 9.6 12.7 11.6V9.8Z" fill="#ffffff"/>
     </svg>
   </a>
 </body>
