--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sophilia</title>
+  <title>Sophilia Social</title>
   <style>
     * {
       margin: 0;
@@ -22,13 +22,13 @@
 
     .logos {
       display: flex;
-      gap: clamp(1rem, 4vw, 2rem);
+      gap: clamp(0.8rem, 3vw, 1.5rem);
     }
 
     .logo {
       display: block;
-      width: clamp(36px, 8vw, 56px);
-      height: clamp(36px, 8vw, 56px);
+      width: clamp(28px, 6vw, 44px);
+      height: clamp(28px, 6vw, 44px);
       transition: transform 0.2s ease;
     }
 
@@ -46,7 +46,7 @@
 
     @media (max-width: 480px) {
       .logos {
-        gap: 1.5rem;
+        gap: 1rem;
       }
     }
   </style>
@@ -61,7 +61,8 @@
 
     <a href="https://www.linkedin.com/company/sophilia" target="_blank" rel="noopener" class="logo linkedin" aria-label="LinkedIn">
       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h1.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0h.003z" fill="#ffffff"/>
+        <rect width="24" height="24" rx="4" ry="4" fill="none"/>
+        <path d="M6.5 6.5C6.5 7.6 5.6 8.5 4.5 8.5C3.4 8.5 2.5 7.6 2.5 6.5C2.5 5.4 3.4 4.5 4.5 4.5C5.6 4.5 6.5 5.4 6.5 6.5ZM6.3 9.8H2.7V19.5H6.3V9.8ZM12.7 9.8H9.2V19.5H12.7V14.3C12.7 11.9 15.8 11.7 15.8 14.3V19.5H19.3V13.5C19.3 9.4 14.6 9.6 12.7 11.6V9.8Z" fill="#ffffff"/>
       </svg>
     </a>
   </div>
