--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sophilia</title>
+  <title>Sophilia Social</title>
   <style>
     * {
       margin: 0;
@@ -27,8 +27,8 @@
 
     .logo {
       display: block;
-      width: clamp(24px, 5vw, 40px);
-      height: clamp(24px, 5vw, 40px);
+      width: clamp(28px, 6vw, 44px);
+      height: clamp(28px, 6vw, 44px);
       transition: transform 0.2s ease;
     }
 
