--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="favicon.jpg">
-    <title>Sophilia Social</title>
+    <title>Sophilia</title>
     <style>
         * {
             margin: 0;
@@ -73,3 +73,4 @@
 </div>
 </body>
 </html>
+
